# Web-Recon-eXecutive

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: wrx.sample.yaml
examples/fixtures/: crawl.sample.json  diff.sample.json  fuzz.sample.json  probe.sample.json  scan.sample.json  subdomains.sample.json  summary.sample.json  zap_baseline_sample.json
examples/juice-shop-demo/: cli-showcase.html  diff.json  diff.txt  doctor-latest.txt  doctor.txt  flow-summary.json  latest-run-metrics.json  report.html  summary.json  zap.json
examples/juice-shop-demo/presets/: bounty-summary.json  deep-summary.json  demo-summary.json  quick-summary.json
templates/: gui.html.j2  report.html.j2
tests/: test_analytics.py  test_config.py  test_diff.py  test_exporters.py  test_gui.py  test_jobstore.py  test_normalize.py  test_normalize_zap.py  test_preflight.py  test_probe_resolution.py  test_report_includes_zap.py  test_triage.py  test_wordlists.py  test_workspace.py
wrx/: __init__.py  analytics.py  cli.py  config.py  diff.py  exporters.py  gui.py  jobstore.py  models.py  preflight.py  report.py  runner.py  triage.py  wordlists.py  workspace.py
wrx/normalize/: __init__.py  ffuf.py  httpx.py  katana.py  nuclei.py  zap.py
wrx/stages/: __init__.py  crawl.py  fuzz.py  probe.py  scan.py  subdomains.py  zap_baseline.py
