[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrx"
version = "0.1.2"
description = "Web Recon eXecutive - safe-by-default web recon orchestrator"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "WRX Contributors" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "PyYAML>=6.0.0",
  "Jinja2>=3.1.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
  "httpx>=0.27.0",
]

[project.scripts]
wrx = "wrx.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wrx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
